<resources>
    <string name="app_name">Podcaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_library">My Library</string>
    <string name="create">Create</string>
    <string name="discover">Discover</string>
    <string name="txt_import">Import</string>
    <string name="recording_msg">Start recording or import recordings to create your own podcast</string>
    <string name="add_flag">Add Flag</string>
    <string name="start">Start</string>
    <string name="recording">Recording</string>
    <string name="pause">Pause</string>
    <string name="save">Save</string>
    <string name="flag_added">Flag Added</string>
    <string name="paused">Paused</string>
    <string name="delete_msg">You will lose the recording data</string>
    <string name="continue_txt">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="save_in_existing_episode">Save In Existing Episode</string>
    <string name="save_in_new_episode">Save In New Episode</string>
    <string name="save_as_segment">Save as a Segment</string>
    <string name="save_recording">Save Recording</string>
</resources>