<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvCreate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codebox.podcaster.ui.recordingFlow.recording.RecordingFragment">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/create"
        android:textColor="@color/colorOnBackground"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="20dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:text="@string/txt_import"
        android:textAllCaps="false"
        android:textColor="@color/colorOnBackground"
        android:textSize="14sp"
        app:cornerRadius="16dp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/colorOnBackground" />

    <TextView
        android:id="@+id/msgRecording"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:text="@string/recording_msg"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRecording" />


    <TextView
        android:id="@+id/tvPlayState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/start"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlayPause" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/recording"
        android:textColor="@color/colorOnBackground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/recordingDot"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/drawable_dot"
        app:layout_constraintEnd_toStartOf="@+id/tvTitle"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/stopRecordingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="textView2,msgRecording,btnSave"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:textColor="@color/colorOnBackground"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:text="10:52" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:enabled="false"
        app:backgroundTint="@color/secFabColor"
        app:layout_constraintEnd_toStartOf="@+id/btnPlayPause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msgRecording"
        app:srcCompat="@drawable/ic_flag"
        app:tint="@android:color/white" />


    <TextView
        android:id="@+id/tvFlagState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:labelFor="@id/btnAddFlag"
        android:text="@string/add_flag"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintEnd_toStartOf="@+id/tvPlayState"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddFlag" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnPlayPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:backgroundTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msgRecording"
        app:srcCompat="@drawable/ic_record_white"
        app:tint="@color/colorOnPrimary" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:backgroundTint="@color/secFabColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlayPause"
        app:layout_constraintTop_toBottomOf="@+id/msgRecording"
        app:srcCompat="@drawable/ic_stop"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/tvActionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:labelFor="@id/btnAddFlag"
        android:text="@string/save"
        android:textColor="@color/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toEndOf="@+id/tvPlayState"
        app:layout_constraintTop_toBottomOf="@+id/btnAction" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/recordingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="recordingDot,tvTitle,tvTimer,btnAddFlag,tvFlagState,btnAction,tvActionStatus"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imgRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_record_scrim" />

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:padding="5dp"
        android:src="@drawable/ic_close"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>